SERVER-83369 Enforce type of `bucketSize` on index creation (#17846)

(cherry picked from commit 65c35f63bc676fe40986e45bd0eafe22fcbdecd8)